--- a/src/css/post.css
+++ b/src/css/post.css
@@ -26,14 +26,17 @@
     .post-image-wrapper {
         background-color: rgb(0, 0, 0, 0%);
         display: flex;
-        overflow: scroll;
+        overflow-x: scroll;
+        overflow-y: hidden;
         align-items: center;
         width: 100%;
+        max-height: 40vh;
     }
 
     .post-image {
-        width: 90vw;
+        max-width: 90vw;
         margin-right: 5vw;
+        max-height: 100%;
     }
 
     .post-content {
